--- a/nd project/natedao/index.html
+++ b/nd project/natedao/index.html
@@ -4,10 +4,44 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://www.gstatic.com/firebasejs/ui/6.0.2/firebase-ui-auth.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.2/firebase-ui-auth.css" />
+    <script src="bower_components/firebaseui/dist/firebaseui.js"></script>
+    <link type="text/css" rel="stylesheet" href="bower_components/firebaseui/dist/firebaseui.css" />
     <script src="/database.js"></script>
+    <script src="/email.js"></script>
     <title>NITTM Database</title>
   </head>
   <body>
+    <div id="login">
+      <h2>Login</h2>
+      <form>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password">
+        <button type="submit" onclick="login()">Login</button>
+      </form>
+      <p>Don't have an account? <a href="#" onclick="showRegister()">Register here</a>.</p>
+    </div>
+    
+    <div id="register" style="display: none">
+      <h2>Register</h2>
+      <form>
+        <label for="newEmail">Email:</label>
+        <input type="email" id="newEmail" name="newEmail">
+        <label for="newPassword">Password:</label>
+        <input type="password" id="newPassword" name="newPassword">
+        <button type="submit" onclick="register()">Register</button>
+      </form>
+      <p>Already have an account? <a href="#" onclick="showLogin()">Login here</a>.</p>
+    </div>
+    
+    <div id="hello" style="display: none">
+      <h2>Hello!</h2>
+      <p>Welcome to our website.</p>
+      <button>Logout</button>
+    </div>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
