--- a/iot project test/my-app/src/index.html
+++ b/iot project test/my-app/src/index.html
@@ -7,7 +7,9 @@
     <script defer src="render.js"></script>
   </head>
   <body>
-    <iframe src="https://thingspeak.com/channels/2077254/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15" frameborder="0" width="100%" height="300"></iframe>
-    <iframe src="https://thingspeak.com/channels/2077254/charts/2?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15" frameborder="0" width="100%" height="300"></iframe>
+    <div>
+		<iframe src="https://thingspeak.com/channels/2077254/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15" frameborder="0" width="100%" height="300"></iframe>
+		<iframe src="https://thingspeak.com/channels/2077254/charts/2?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15" frameborder="0" width="100%" height="300"></iframe>
+	</div>
   </body>
 </html>
